Auth added halfway
